# economic-prophet

./: LICENSE  README.md  pyproject.toml
docs/: architecture.md  heller_mesh_measurement.md  integrations.md  object_model.md  product_spec.md  unified_value_measurement_calculus.md  uvmc_object_alignment.md  valueflows_mpcc_alignment.md  valueflows_mpcc_energy_alignment.md  whitepaper.md
examples/: account.json  canonical_object.json  collateral_set.json  funding_source.json  hedge_set.json  heller_mesh_measurement.json  instrument.json  lineage_ep_output.json  object_graph.json  synthetic_audit_example.json  synthetic_relationship.json  synthetic_relationship_runtime.json  synthetic_run.json  transaction_event.json  uvmc_knowledge_quality_banking.json  uvmc_measurement_context_banking.json
schemas/: account.schema.json  audit_record.schema.json  canonical_object.schema.json  collateral_set.schema.json  context_audit_record.schema.json  ep_output.schema.json  funding_source.schema.json  hedge_set.schema.json  heller_mesh_measurement.schema.json  instrument.schema.json  instrument_context_output.schema.json  lineage_ep_output.schema.json  relationship.schema.json  relationship_context_output.schema.json  synthetic_run.schema.json  transaction_event.schema.json  uvmc_calculation_receipt.schema.json  uvmc_dimension.schema.json  uvmc_knowledge_quality.schema.json  uvmc_measurement_context.schema.json  uvmc_tensor_mapping.schema.json
tests/: test_breakeven.py  test_context_output_schemas.py  test_heller_mesh.py  test_instrument_context.py  test_lineage_ep_output.py  (+10 more)
(+23 files in other folders)
